<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/haus"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:background="#CCA6A3A5"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:fontFamily="casual"
            android:text="@string/Register"
            android:textColor="#000000"
            android:textSize="19sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:hint="@string/Name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textColor="#000000"
                android:textColorHint="#CCCCCC" />

            <Spinner
                android:id="@+id/spinnerGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:entries="@array/gender_list"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif"
                android:hint="@string/Email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:textColor="#000000"
                android:textColorHint="#CCCCCC" />

            <EditText
                android:id="@+id/edtTelp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif"
                android:hint="@string/NumberPhone"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:textColor="#000000"
                android:textColorHint="#CCCCCC" />

            <EditText
                android:id="@+id/edtAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif"
                android:gravity="top"
                android:hint="@string/Address"
                android:imeOptions="actionNext"
                android:inputType="textMultiLine"
                android:textColor="#000000"
                android:textColorHint="#CCCCCC" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/Save" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>